bk_ida/gccida/c3/rest_of_compilation
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/toplev.c:2931:15: error: use of undeclared identifier 'TV_REST_OF_COMPILATION_0'; did you mean 'TV_REST_OF_COMPILATION'?
timevar_push( TV_REST_OF_COMPILATION_0); 
              ^~~~~~~~~~~~~~~~~~~~~~~~
              TV_REST_OF_COMPILATION
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/timevar.def:89:13: note: 'TV_REST_OF_COMPILATION' declared here
DEFTIMEVAR (TV_REST_OF_COMPILATION   , "rest of compilation")
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/toplev.c:2955:15: error: use of undeclared identifier 'TV_INTEGRATION_0'; did you mean 'TV_INTEGRATION'?
timevar_push( TV_INTEGRATION_0); 
              ^~~~~~~~~~~~~~~~
              TV_INTEGRATION
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/timevar.def:55:13: note: 'TV_INTEGRATION' declared here
DEFTIMEVAR (TV_INTEGRATION           , "integration")
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/toplev.c:2957:14: error: use of undeclared identifier 'TV_INTEGRATION_0'; did you mean 'TV_INTEGRATION'?
timevar_pop( TV_INTEGRATION_0); 
             ^~~~~~~~~~~~~~~~
             TV_INTEGRATION
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/timevar.def:55:13: note: 'TV_INTEGRATION' declared here
DEFTIMEVAR (TV_INTEGRATION           , "integration")
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/toplev.c:2984:15: error: use of undeclared identifier 'TV_DUMP_0'; did you mean 'TV_DUMP'?
timevar_push( TV_DUMP_0); 
              ^~~~~~~~~
              TV_DUMP
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/timevar.def:40:13: note: 'TV_DUMP' declared here
DEFTIMEVAR (TV_DUMP                  , "dump files")
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/toplev.c:2997:14: error: use of undeclared identifier 'TV_DUMP_0'; did you mean 'TV_DUMP'?
timevar_pop( TV_DUMP_0); 
             ^~~~~~~~~
             TV_DUMP
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/timevar.def:40:13: note: 'TV_DUMP' declared here
DEFTIMEVAR (TV_DUMP                  , "dump files")
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/toplev.c:3048:15: error: use of undeclared identifier 'TV_INTEGRATION_0'; did you mean 'TV_INTEGRATION'?
timevar_push( TV_INTEGRATION_0); 
              ^~~~~~~~~~~~~~~~
              TV_INTEGRATION
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/timevar.def:55:13: note: 'TV_INTEGRATION' declared here
DEFTIMEVAR (TV_INTEGRATION           , "integration")
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/toplev.c:3050:14: error: use of undeclared identifier 'TV_INTEGRATION_0'; did you mean 'TV_INTEGRATION'?
timevar_pop( TV_INTEGRATION_0); 
             ^~~~~~~~~~~~~~~~
             TV_INTEGRATION
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/timevar.def:55:13: note: 'TV_INTEGRATION' declared here
DEFTIMEVAR (TV_INTEGRATION           , "integration")
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/toplev.c:3087:15: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_push( TV_JUMP_0); 
              ^~~~~~~~~
              TV_JUMP
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/toplev.c:3094:15: error: use of undeclared identifier 'TV_DUMP_0'; did you mean 'TV_DUMP'?
timevar_push( TV_DUMP_0); 
              ^~~~~~~~~
              TV_DUMP
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/timevar.def:40:13: note: 'TV_DUMP' declared here
DEFTIMEVAR (TV_DUMP                  , "dump files")
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/toplev.c:3107:14: error: use of undeclared identifier 'TV_DUMP_0'; did you mean 'TV_DUMP'?
timevar_pop( TV_DUMP_0); 
             ^~~~~~~~~
             TV_DUMP
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/timevar.def:40:13: note: 'TV_DUMP' declared here
DEFTIMEVAR (TV_DUMP                  , "dump files")
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/toplev.c:3109:14: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_pop( TV_JUMP_0); 
             ^~~~~~~~~
             TV_JUMP
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/toplev.c:3114:15: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_push( TV_JUMP_0); 
              ^~~~~~~~~
              TV_JUMP
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/toplev.c:3121:15: error: use of undeclared identifier 'TV_DUMP_0'; did you mean 'TV_DUMP'?
timevar_push( TV_DUMP_0); 
              ^~~~~~~~~
              TV_DUMP
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/timevar.def:40:13: note: 'TV_DUMP' declared here
DEFTIMEVAR (TV_DUMP                  , "dump files")
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/toplev.c:3134:14: error: use of undeclared identifier 'TV_DUMP_0'; did you mean 'TV_DUMP'?
timevar_pop( TV_DUMP_0); 
             ^~~~~~~~~
             TV_DUMP
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/timevar.def:40:13: note: 'TV_DUMP' declared here
DEFTIMEVAR (TV_DUMP                  , "dump files")
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/toplev.c:3136:14: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_pop( TV_JUMP_0); 
             ^~~~~~~~~
             TV_JUMP
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/toplev.c:3145:15: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_push( TV_JUMP_0); 
              ^~~~~~~~~
              TV_JUMP
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/toplev.c:3156:14: error: use of undeclared identifier 'TV_JUMP_0'; did you mean 'TV_JUMP'?
timevar_pop( TV_JUMP_0); 
             ^~~~~~~~~
             TV_JUMP
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/timevar.def:56:13: note: 'TV_JUMP' declared here
DEFTIMEVAR (TV_JUMP                  , "jump")
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/toplev.c:3161:15: error: use of undeclared identifier 'TV_DUMP_0'; did you mean 'TV_DUMP'?
timevar_push( TV_DUMP_0); 
              ^~~~~~~~~
              TV_DUMP
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/timevar.def:40:13: note: 'TV_DUMP' declared here
DEFTIMEVAR (TV_DUMP                  , "dump files")
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/toplev.c:3174:7: error: use of undeclared identifier 'TV_DUMP_0'; did you mean 'TV_DUMP'?
v52 = TV_DUMP_0; 
      ^~~~~~~~~
      TV_DUMP
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/timevar.def:40:13: note: 'TV_DUMP' declared here
DEFTIMEVAR (TV_DUMP                  , "dump files")
            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/rest_of_compilation/src/obj/toplev.o] Error 1
